@@ -1,8 +1,17 @@
-<h2>Plan de campagne</h2>
+<!--
+    Translation of CVS Revision: 1.2
+    
+    Translators must leave this comment in tact, but remove any dollar
+    signs ($) from the CVS Revision indicator.
 
-Since content and form of a score are separate, we have to match that
-in the design of software. Hence, the basic blueprint  of our program
-should this scheme
+    When revising a translation, copy the CVS Revision number from the
+    original source file.  !-->
+
+<h2>Diviser pour mieux r&eacute;gner</h2>
+
+Dans la mesure o&ugrave; on distingue le contenu et la forme d'une partition,
+il nous faut adopter ce principe dans la conception m&ecirc;me du logiciel. Par
+cons&eacute;quent, le projet peut se sch&eacute;matiser ainsi&nbsp;:
 
 <table>
 <tr>
@@ -18,33 +27,35 @@ should this scheme
 </tr>
 <tr>
 <td align="center">
-1. form
+1. forme
 </td>
 <td align="center">
-2. translation
+2. traduction
 </td>
 <td align="center">
-3. content
+3. contenu
 </td>
 </tr>
 </table>
 
-In effect, we are conquering the problem by dividing it into
-subproblems
+En r&eacute;alit&eacute;, nous surmontons le probl&egrave;me en
+le d&eacute;composant en probl&egrave;mes plus simples&nbsp;:
 
 <ol start="1">
-<li>Typography:  <b>where</b> to put symbols
-<li>Notation:  <b>what</b> symbols to produce
-<li>Representation: how to <b>encode</b>  music
+<li>Typographie&nbsp;: <b>o&ugrave;</b> positionner les symboles
+<li>Notation&nbsp;: <b>quels</b> symboles produire
+<li>Repr&eacute;sentation&nbsp;: comment <b>coder</b> la musique
 </ol>
 
-Finally, whenever you subdivide a problem, a new problem is created,
+Enfin, &agrave; chaque fois que l'on d&eacute;compose un
+probl&egrave;me, il en surgit un nouveau&nbsp;:
 <ol start="4">
-<li> Architecture: glue everything <b>together</b>
+<li>Architecture&nbsp;: <b>recoller</b> les morceaux.
 </ol>
 
 
 
 <p align=right>
-Next: <a href=implementing-notation.html>Impressive, but does it also
-work in theory</a>? A practical approach to capturing notation.
+Suite&nbsp;: <a href="implementing-notation.html">Impressionnant, mais
+que se passe-t-il en th&eacute;orie</a>&nbsp;? Une approche pratique pour
+ma&icirc;triser la notation.</p>
