@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.6 
+    Translation of CVS Revision: 1.7
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -58,7 +58,5 @@ de dessiner son symbole est modifi&eacute;e au cours de l'extrait musical&nbsp;:
 </ul>
 
 <p align="right">
-Suite&nbsp;: <a href="benchmarking.html">L'homme est la mesure de
-toute chose</a>&nbsp;: peut-on se contenter d'une architecture
-flexible&nbsp;?
-</p>
+Suite&nbsp;: <a href="scoring-esthetics.html">Nombres de beaut&eacute;</a>&nbsp;:
+comment LilyPond participe au concours Miss Monde.</p>
