@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.7 
+    Translation of CVS Revision: 1.8
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -22,18 +22,19 @@
 
 
 <p>
-LilyPond n'est pas le seul &agrave; faire de la notation musicale&nbsp;: 
-il existe de nombreux programmes qui impriment de la musique, et
-la majorit&eacute; des &eacute;ditions r&eacute;centes est g&eacute;n&eacute;r&eacute;e par
-ordinateur. Cependant, n'importe quel musicien classique vous fera
-remarquer que les partitions d'aujourd'hui ne sont pas aussi jolies
-que les anciennes.
+LilyPond n'est pas le seul &agrave; faire de la notation
+musicale&nbsp;: il existe de nombreux programmes qui impriment de la
+musique, et la majorit&eacute; des &eacute;ditions r&eacute;centes est
+g&eacute;n&eacute;r&eacute;e par ordinateur. Cependant, n'importe quel
+musicien classique vous fera remarquer que les partitions
+d'aujourd'hui ne sont pas aussi jolies que les anciennes.
 </p>
 <p>
 Qu'est-ce qui diff&eacute;rencie le travail de l'homme de celui de la
-machine, &agrave; quoi cela tient-il&nbsp;? Comment pouvons-nous am&eacute;liorer cette
-situation&nbsp;? Cet essai aborde les probl&egrave;mes relatifs aux
-programmes de notation musicale et notre approche pour les r&eacute;soudre. 
+machine, &agrave; quoi cela tient-il&nbsp;? Comment pouvons-nous
+am&eacute;liorer cette situation&nbsp;? Cet essai aborde les
+probl&egrave;mes relatifs aux programmes de notation musicale et notre
+approche pour les r&eacute;soudre.
 </p>
 
 
@@ -49,31 +50,39 @@ cloche dans la notation musicale informatis&eacute;e&nbsp;;</li>
 ou pourquoi Finale n'est pas la panac&eacute;e en terme d'informatique
 musicale&nbsp;;</li>
 
-<li><a href="problem-statement.html">Une meilleure approche</a>
-de la mani&egrave;re d'imprimer la musique&nbsp;;</li>
+<li><a href="problem-statement.html">Comment ne pas concevoir un
+logiciel</a>, ou&nbsp;: mod&eacute;liser la notation musicale&nbsp;;</li>
 
-<li><a href="implementing-notation.html">Impressionnant, mais que
-se passe-t-il en th&eacute;orie</a>&nbsp;? Une approche pratique pour
+<li><a href="divide-and-conquer.html">Diviser pour mieux r&eacute;gner</a>,
+un mod&egrave;le pour la notation automatis&eacute;e&nbsp;;</li>
+
+<li><a href="implementing-notation.html">Impressionnant, mais que se
+passe-t-il en th&eacute;orie</a>&nbsp;? Une approche pratique pour
 ma&icirc;triser la notation&nbsp;;</li>
 
 <li><a href="engraving.html">Graver la musique</a>, ou l'art d'imprimer
 des partitions&nbsp;;</li>
 
 <li><a href="implementing-typography.html">Impl&eacute;mentation de
-typographie</a>&nbsp;: les <em>hackers</em> s'attaquent aux probl&egrave;mes
-de la gravure&nbsp;;</li>
+la typographie</a>&nbsp;: les <em>hackers</em> s'attaquent aux
+probl&egrave;mes de la gravure&nbsp;;</li>
 
-<li><a href="formatting-architecture.html">Une architecture de programme
-flexible</a> nous permet d'&eacute;crire un logiciel de gravure&nbsp;;</li>
+<li><a href="formatting-architecture.html">Une architecture de
+programme flexible</a> nous permet d'&eacute;crire un logiciel de
+gravure&nbsp;;</li>
 
-<li><a href="benchmarking.html">&Eacute;valuation des performances</a>&nbsp;: peut-on
-se contenter d'une architecture flexible&nbsp;?</li>
+<li><a href="scoring-esthetics.html">Nombres de beaut&eacute;</a>&nbsp;:
+comment LilyPond participe au concours Miss Monde&nbsp;;</li>
+
+<li><a href="benchmarking.html">&Eacute;valuation des
+performances</a>&nbsp;: peut-on se contenter d'une architecture
+flexible&nbsp;?</li>
 
 <li><a href="typography-features.html">Fonctionnalit&eacute;s
 typographiques</a> propres &agrave; LilyPond&nbsp;;</li>
 
-<li><a href="input-format.html">Format source</a>&nbsp;: comment saisir
-la musique&nbsp;;</li>
+<li><a href="input-format.html">Format source</a>&nbsp;: comment
+saisir la musique&nbsp;;</li>
 
 <li><a href="conclusion.html">Conclusion</a>.</li>
 
