@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.8 
+    Translation of CVS Revision: 1.9
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -113,7 +113,6 @@ regarder &agrave; la loupe.
 
 
 <p align="right">
-Suite&nbsp;: <a href="problem-statement.html">Ce &agrave; quoi nous aspirons,
-mais dont nous ne disposions pas jusqu'alors</a>&nbsp;: un logiciel de
-notation musicale plus performant.</p>
+Suite&nbsp;: <a href="problem-statement.html">Comment ne pas concevoir un
+logiciel</a>, ou&nbsp;: mod&eacute;liser la notation musicale.</p>
 
