@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.276
+    Translation of CVS Revision: 1.277
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -17,12 +17,7 @@
       </p>
     </td>
     <td width="50%">
-      <p class="top" align="right">
-	<tt>http://lilypond.org</tt>
-	<a href="http://sca.uwaterloo.ca/lilypond/lilypond.org/web/">
-	  miroir <tt>.ca</tt>
-	</a>
-      </p>
+
     </td>
   </tr>
 </table>
