@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.43
+    Translation of CVS Revision: 1.45
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -29,7 +29,7 @@
     <th>Version</th>
     <th>Aller ici</th>
     <th>Version de LilyPond</th>
-    <th>Packager</th>
+    <th>Compil&eacute; et empaquet&eacute; par</th>
   </tr>
 
   @stable.ihtml@
@@ -49,7 +49,7 @@ d&eacute;veloppement</h2>
     <th>Version</th>
     <th>Aller ici</th>
     <th>Version de LilyPond</th>
-    <th>Packager</th>
+    <th>Compil&eacute; et empaquet&eacute; par</th>
   </tr>
 
   @devel.ihtml@
@@ -59,15 +59,28 @@ d&eacute;veloppement</h2>
 <h2>Anciennes versions</h2>
 <p>
   Si vous estimez que LilyPond &eacute;volue trop vite, essayez une des
-  <a href="older-versions.html">plus anciennes versions</a>.
+  <a href="older-versions.html">versions plus anciennes</a>.
 </p>
+
+<h2>Sponsors</h2>
+
+Nous remercions <a href="http://www.vt.edu">Virginia Tech</a> et
+<a href="http://www.linuxaudio.org">linuxaudio.org</a> qui
+sponsorisent notre bande passante.
+<p>
+<img src="http://lau.linuxaudio.org/images/VTlogo_ITF.gif">
+<img src="http://linuxaudio.org/en/linuxaudio.png" width="250">
 
 <h2>Notes</h2>
 
 <p>
-  Si votre plate-forme n'est pas list&eacute;e vous pouvez nous aider en
-  <a href="../devel/packaging.html">r&eacute;alisant des paquetages LilyPond</a>.
-</p>
+Les programmes d'installation pr&ecirc;ts &agrave; l'emploi ont
+&eacute;t&eacute; cr&eacute;&eacute;s avec GUB. Lisez <a
+href="http://lilypond.org/~hanwen/gub/READ-ME">GUB README</a> pour
+plus d'informations sur GUB.
+<p>
+Tous les logos et images sont des marques d&eacute;pos&eacute;es ou
+sont sous copyright de leurs propri&eacute;taires.
 
 <p>
   <i>
