@@ -1,3 +1,7 @@
+2006-06-26  John Mandereau  <john.mandereau@free.fr>
+
+	* fr/<various files>: update translation.
+
 2006-06-21  John Mandereau  <john.mandereau@free.fr>
 
 	* fr/about/index.html: update image reference.
